--- a/settings.properties
+++ b/settings.properties
@@ -1,4 +1,4 @@
 #Settings
-#Thu Apr 18 23:47:01 AEST 2024
+#Fri Apr 19 08:32:30 AEST 2024
 deleteWithoutConfirmation=true
-normalizeNames=false
+normalizeNames=true
